include(CheckFunctionExists)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/)
if(MSVC)
    set(CMAKE_C_FLAGS "${CMAKE_C_CLAGS} /Wall")
elseif(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra")
endif()

set(CMAKE_C_STANDARD 11)
add_executable(graphics main.c graphics.c collision.c)
add_executable(test_aabb test_aabb.c graphics.c collision.c)
add_executable(test_quadtree_nogui test_quadtree_nogui.c collision.c)
add_executable(test_quadtree_gui test_quadtree_gui.c graphics.c collision.c)
target_link_libraries(graphics glad glfw lodepng)
target_link_libraries(test_aabb glad glfw lodepng)
target_link_libraries(test_quadtree_gui glad glfw lodepng)
include_directories(../include)

CHECK_FUNCTION_EXISTS(fmin HAVE_FMIN)
if(NOT HAVE_FMIN)
    CHECK_LIBRARY_EXISTS(m fmin "" HAVE_M_FMIN)
    if(HAVE_M_FMIN)
        target_link_libraries(graphics m)
        target_link_libraries(test_aabb m)
        target_link_libraries(test_quadtree_nogui m)
        target_link_libraries(test_quadtree_gui m)
    else()
        message(FATAL_ERROR "no fmin() found")
    endif()
endif()
