function(add_test_exe TEST_NAME HAS_GUI)
    if(HAS_GUI)
        list(APPEND ARGN "../src/graphics.c")
    endif()
    add_executable(${TEST_NAME} ${ARGN})
    set_property(TARGET ${TEST_NAME} PROPERTY C_STANDARD 11)
    target_compile_options(${TEST_NAME} PRIVATE ${GRAPHICS_BUILD_OPTIONS})
    target_link_libraries(${TEST_NAME} ${GRAPHICS_MATH_LIBS})
    if(HAS_GUI)
        target_link_libraries(${TEST_NAME} glad glfw lodepng)
    endif()
    target_include_directories(${TEST_NAME} PRIVATE "../include")
endfunction()

add_test_exe(test_aabb YES test_aabb.c ../src/collision.c)
add_test_exe(test_quadtree_nogui NO test_quadtree_nogui.c ../src/collision.c)
add_test_exe(test_quadtree_gui YES test_quadtree_gui.c ../src/collision.c)
add_test_exe(test_hashtable NO test_hashtable.c ../src/hashtable.c)
